# DronLibreFirmwareTools

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  roadmap.md  run_samples.py
.github/workflows/: tests.yml
docs/: MANUAL_HEALTH_CHECK.md  REPO_STATUS.md  connection_test_002.md  index.md  installation.md  supported_formats.md  usage.md
notebooks/: verify_k66_parser.ipynb
samples/: README.md  generate_samples.py
src/: __init__.py  analyzer.py  cli.py  file_signatures.py  firmware_db.py  report_generator.py  utils.py
src/parsers/: __init__.py  betaflight.py  dji.py  stm32.py
src/parsers/ardupilot/: __init__.py
src/parsers/betaflight/: __init__.py
src/parsers/dji/: __init__.py
src/parsers/esp32/: __init__.py
src/parsers/inav/: __init__.py
src/parsers/k66/: __init__.py
src/parsers/stm32/: __init__.py
tests/: test_analysis.py  test_analyzer_formats.py  test_file_signatures.py  test_file_signatures_extended.py  test_report_generator.py  test_stm32_and_db.py
